# fluentqa-pdao

./: .coveragerc  .gitignore  Makefile  README.md  cookiecutter-config-file.yml  pyproject-poetry.toml  pyproject.toml  references.yaml  settings.toml  test.db
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
docs/: 1-database-cllient.md  usage.md
scripts/: add_git_dep.sh  cleanup.sh
src/fluentdao/: bootstrap.py  client.py  repository.py  sql_utils.py
src/qpydao/: __init__.py  annotations.py  bootstrap.py  client.py  connections.py  dao_logger.py  database_client.py  db.py  decorators.py  exceptions.py  models.py  repository.py  sql_utils.py  test_manager.py  utils.py
src/qpydao/core/: __init__.py  database_client.py  decorators.py  exceptions.py  models.py  repository.py  sql_utils.py
src/qpydao/mapper/: base.py  pydantic_mapper.py
tests/: fixtures_db.py  test.db  test_client_demo.ipynb  test_database_client.py  test_db_client.py  test_db_statments.py  test_ddl_model.py  test_generate.py  test_repository.py  test_sqlachemy_demo.ipynb
tests/dy/: __init__.py  test_annotations.py  test_database_initialization.py  test_mappers.py  test_mariadbmap_tojson.py  test_pydantic_mappers.py  test_sql_decorator.py  test_sql_exists_decorator.py  test_sql_in_list_templates.py  test_sql_insert_templates.py  test_template_generators.py
